build/log/idf_py_stdout_output_304372
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/deity/esp/fizzy_wair/build/bootloader/esp-idf/esptool_py && /home/deity/.espressif/python_env/idf6.0_py3.10_env/bin/python /home/deity/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/deity/esp/fizzy_wair/build/bootloader/bootloader.bin
Bootloader binary size 0x66a0 bytes. 0x960 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/fizzy_wair.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/fizzy_wair.c.obj 
/home/deity/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-896-g1bbf04cb4c-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/deity/esp/fizzy_wair/build/config -I/home/deity/esp/fizzy_wair/main -I/home/deity/esp/esp-idf/components/newlib/platform_include -I/home/deity/esp/esp-idf/components/freertos/config/include -I/home/deity/esp/esp-idf/components/freertos/config/include/freertos -I/home/deity/esp/esp-idf/components/freertos/config/xtensa/include -I/home/deity/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/deity/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/deity/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/deity/esp/esp-idf/components/freertos/esp_additions/include -I/home/deity/esp/esp-idf/components/esp_hw_support/include -I/home/deity/esp/esp-idf/components/esp_hw_support/include/soc -I/home/deity/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/deity/esp/esp-idf/components/esp_hw_support/dma/include -I/home/deity/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/deity/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/deity/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/deity/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/deity/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/deity/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/deity/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/deity/esp/esp-idf/components/heap/include -I/home/deity/esp/esp-idf/components/heap/tlsf -I/home/deity/esp/esp-idf/components/log/include -I/home/deity/esp/esp-idf/components/soc/include -I/home/deity/esp/esp-idf/components/soc/esp32 -I/home/deity/esp/esp-idf/components/soc/esp32/include -I/home/deity/esp/esp-idf/components/soc/esp32/register -I/home/deity/esp/esp-idf/components/hal/platform_port/include -I/home/deity/esp/esp-idf/components/hal/esp32/include -I/home/deity/esp/esp-idf/components/hal/include -I/home/deity/esp/esp-idf/components/esp_rom/include -I/home/deity/esp/esp-idf/components/esp_rom/esp32/include -I/home/deity/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/deity/esp/esp-idf/components/esp_rom/esp32 -I/home/deity/esp/esp-idf/components/esp_common/include -I/home/deity/esp/esp-idf/components/esp_system/include -I/home/deity/esp/esp-idf/components/esp_system/port/soc -I/home/deity/esp/esp-idf/components/esp_system/port/include/private -I/home/deity/esp/esp-idf/components/xtensa/esp32/include -I/home/deity/esp/esp-idf/components/xtensa/include -I/home/deity/esp/esp-idf/components/xtensa/deprecated_include -I/home/deity/esp/esp-idf/components/lwip/include -I/home/deity/esp/esp-idf/components/lwip/include/apps -I/home/deity/esp/esp-idf/components/lwip/include/apps/sntp -I/home/deity/esp/esp-idf/components/lwip/lwip/src/include -I/home/deity/esp/esp-idf/components/lwip/port/include -I/home/deity/esp/esp-idf/components/lwip/port/freertos/include -I/home/deity/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/deity/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/deity/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/deity/esp/esp-idf/components/esp_lcd/include -I/home/deity/esp/esp-idf/components/esp_lcd/interface -I/home/deity/esp/esp-idf/components/driver/deprecated -I/home/deity/esp/esp-idf/components/driver/i2c/include -I/home/deity/esp/esp-idf/components/driver/touch_sensor/include -I/home/deity/esp/esp-idf/components/driver/twai/include -I/home/deity/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/deity/esp/esp-idf/components/esp_pm/include -I/home/deity/esp/esp-idf/components/esp_ringbuf/include -I/home/deity/esp/esp-idf/components/esp_driver_gpio/include -I/home/deity/esp/esp-idf/components/esp_driver_pcnt/include -I/home/deity/esp/esp-idf/components/esp_driver_gptimer/include -I/home/deity/esp/esp-idf/components/esp_driver_spi/include -I/home/deity/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/deity/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/deity/esp/esp-idf/components/esp_driver_i2s/include -I/home/deity/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/deity/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/deity/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/deity/esp/esp-idf/components/sdmmc/include -I/home/deity/esp/esp-idf/components/esp_driver_sdspi/include -I/home/deity/esp/esp-idf/components/esp_driver_sdio/include -I/home/deity/esp/esp-idf/components/esp_driver_dac/include -I/home/deity/esp/esp-idf/components/esp_driver_rmt/include -I/home/deity/esp/esp-idf/components/esp_driver_tsens/include -I/home/deity/esp/esp-idf/components/esp_driver_sdm/include -I/home/deity/esp/esp-idf/components/esp_driver_i2c/include -I/home/deity/esp/esp-idf/components/esp_driver_uart/include -I/home/deity/esp/esp-idf/components/vfs/include -I/home/deity/esp/esp-idf/components/esp_driver_ledc/include -I/home/deity/esp/esp-idf/components/esp_driver_parlio/include -I/home/deity/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/deity/esp/esp-idf/components/esp_driver_twai/include -I/home/deity/esp/fizzy_wair/components/i2cdev -I/home/deity/esp/fizzy_wair/components/esp_idf_lib_helpers -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/deity/esp/fizzy_wair=. -fmacro-prefix-map=/home/deity/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/fizzy_wair.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/fizzy_wair.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/fizzy_wair.c.obj -c /home/deity/esp/fizzy_wair/main/fizzy_wair.c
In file included from /home/deity/esp/fizzy_wair/main/fizzy_wair.c:12:
/home/deity/esp/fizzy_wair/main/fonts6x8.h: In function 'get_char_data':
/home/deity/esp/fizzy_wair/main/fonts6x8.h:65:11: warning: comparison is always false due to limited range of data type [-Wtype-limits]
   65 |     if (c < 0 || c > 127) {
      |           ^
/home/deity/esp/fizzy_wair/main/fonts6x8.h:66:16: warning: return discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   66 |         return font6x8_alpha[32]; // возвращаем пробел для неизвестных символов
      |                ^~~~~~~~~~~~~
/home/deity/esp/fizzy_wair/main/fonts6x8.h:68:12: warning: return discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   68 |     return font6x8_alpha[(uint8_t)c];
      |            ^~~~~~~~~~~~~
/home/deity/esp/fizzy_wair/main/fizzy_wair.c: In function 'draw_string_to_fb':
/home/deity/esp/fizzy_wair/main/fizzy_wair.c:79:33: error: expected expression before '{' token
   79 |                 word_buf.data = {};
      |                                 ^
ninja: build stopped: subcommand failed.
